--- a/templates/home.html
+++ b/templates/home.html
@@ -131,6 +131,7 @@
           <li><a href="/life" class="hover:text-blue-300 transition">Lifestyle Check</a></li>
           <li><a href="/chatbot" class="hover:text-blue-300 transition">Chatbot</a></li>
           <li><a href="/explore" class="hover:text-blue-300 transition">Explore Data</a></li>
+          <li><a href="/forum" class="hover:text-blue-300 transition">Forum</a></li>
         </ul>
       </nav>
     </div>
@@ -165,6 +166,7 @@
           <a href="/life" class="btn-3d bg-green-700 hover:bg-green-800 text-white px-10 py-4 rounded-lg shadow-lg transition transform">Lifestyle Check</a>
           <a href="/chatbot" class="btn-3d bg-purple-700 hover:bg-purple-800 text-white px-10 py-4 rounded-lg shadow-lg transition transform">Chatbot</a>
           <a href="/explore" class="btn-3d bg-indigo-700 hover:bg-indigo-800 text-white px-10 py-4 rounded-lg shadow-lg transition transform">Explore Data</a>
+          <a href="/forum" class="btn-3d bg-red-700 hover:bg-indigo-800 text-white px-10 py-4 rounded-lg shadow-lg transition transform">Forum</a>
         </div>
       </div>
 
